test-7-final.02.(after Slava commit)